--- a/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
+++ b/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "id": "bae6c2a9",
    "metadata": {},
    "outputs": [
@@ -39,21 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9ce4991c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "83"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(frase)"
    ]
@@ -85,39 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dd8049a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(frase)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "432250e9-3939-462d-9cf4-8c9b7ee76af1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'lanzar por la ventana'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "frase[44:55]+frase[44:46]+frase[58:66]"
    ]
@@ -127,18 +97,7 @@
    "execution_count": null,
    "id": "312024e9-3fee-4a34-bafd-c7efa15409d3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "59"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -152,62 +111,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "9299725f",
+   "execution_count": null,
+   "id": "e88e8991",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(frase)"
+    "string.find(\"confies\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "ff0e6a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(\"confies en un ordenador\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a5836806-b2a8-48b4-a602-c5662b0372a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "frase.index(\"ordenador\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "d04b0e7c-8447-4dfb-8061-660380b02b1e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frase[-20:-43]"
+    "string[-77:-54]"
    ]
   },
   {
@@ -228,27 +157,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "id": "2a36dfd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "51\n",
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(string.find(\"un ordenador\"))\n",
+    "print(string.find(\"por una ventana\"))\n",
+    "print(string.find(\"Steve Wozniak\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "id": "eae3f714",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "subfrase1= string[17:29]\n",
+    "subfrase2= string[51:66]\n",
+    "subfrase3= string[70:83]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "32dec2c4",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a36dfd5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'un ordenador, por una ventana -- Steve Wozniak'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nueva_frase= f\"{subfrase1}, {subfrase2} -- {subfrase3}\"\n",
+    "nueva_frase"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,19 +222,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad0072cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "9c844740-5270-48d5-a1b6-64d2e4da04c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "string=nueva_frase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "ad0072cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "un ordenador, por una ventana -- Steve Wozniak\n",
+      "nodndr o n etn -SeeWzi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nueva_frase)\n",
+    "print(string[1:-1:2])\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -294,19 +269,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "e3da06b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=frase\n",
+    "print(frase)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3e2759c4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Nunca'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string[0:5]\n"
+   ]
   },
   {
    "cell_type": "code",
