--- a/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
+++ b/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "id": "bae6c2a9",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "id": "e3da06b4",
    "metadata": {},
    "outputs": [
@@ -288,32 +288,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3e2759c4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Nunca'"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ua\n"
+     ]
     }
    ],
    "source": [
-    "string[0:5]\n"
+    "palabra1= string[0:5]\n",
+    "print(palabra1[1:5:3])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b043abed-e4b5-46cd-be2a-f596ccd29ddf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ua\n"
+     ]
+    }
+   ],
+   "source": [
+    "palabra2= string[55:58]\n",
+    "print(palabra2[0:3:2])"
+   ]
   },
   {
    "cell_type": "markdown",
