--- a/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
+++ b/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bae6c2a9",
    "metadata": {},
    "outputs": [
@@ -39,10 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9ce4991c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(frase)"
    ]
@@ -74,20 +85,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dd8049a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak\n"
+     ]
+    }
+   ],
    "source": [
     "print(frase)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "432250e9-3939-462d-9cf4-8c9b7ee76af1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lanzar por la ventana'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "frase[44:55]+frase[44:46]+frase[58:66]"
    ]
@@ -111,30 +141,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e88e8991",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "string=frase\n",
     "string.find(\"confies\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ff0e6a4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(\"confies en un ordenador\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a5836806-b2a8-48b4-a602-c5662b0372a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'confies en un ordenador'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "string[-77:-54]"
    ]
@@ -157,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "2a36dfd5",
    "metadata": {},
    "outputs": [
@@ -179,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "eae3f714",
    "metadata": {},
    "outputs": [],
@@ -191,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "32dec2c4",
    "metadata": {},
    "outputs": [
@@ -201,7 +265,7 @@
        "'un ordenador, por una ventana -- Steve Wozniak'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "9c844740-5270-48d5-a1b6-64d2e4da04c8",
    "metadata": {},
    "outputs": [],
@@ -232,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "id": "ad0072cd",
    "metadata": {},
    "outputs": [
@@ -269,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "e3da06b4",
    "metadata": {},
    "outputs": [
@@ -288,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "3e2759c4",
    "metadata": {},
    "outputs": [
@@ -307,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "b043abed-e4b5-46cd-be2a-f596ccd29ddf",
    "metadata": {},
    "outputs": [
@@ -534,11 +598,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "64cd99f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = frase.lower().count(\"a\")\n",
+    "e = frase.lower().count(\"e\")\n",
+    "i = frase.lower().count(\"i\")\n",
+    "o = frase.lower().count(\"o\")\n",
+    "u = frase.lower().count(\"u\")\n",
+    "vocales = a + e + i + o + u\n",
+    "vocales"
+   ]
   },
   {
    "cell_type": "code",
@@ -574,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "04bac0f8",
    "metadata": {},
    "outputs": [],
