--- a/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
+++ b/MOD01/01.Notebooks Ejercicios/01.strings_10_12_2024.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "bae6c2a9",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "9ce4991c",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "83"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "dd8049a0",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "432250e9-3939-462d-9cf4-8c9b7ee76af1",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "'lanzar por la ventana'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "e88e8991",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "ff0e6a4b",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "23"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "a5836806-b2a8-48b4-a602-c5662b0372a6",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "'confies en un ordenador'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "2a36dfd5",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "eae3f714",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "32dec2c4",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "'un ordenador, por una ventana -- Steve Wozniak'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "9c844740-5270-48d5-a1b6-64d2e4da04c8",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "ad0072cd",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "e3da06b4",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "3e2759c4",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "b043abed-e4b5-46cd-be2a-f596ccd29ddf",
    "metadata": {},
    "outputs": [
@@ -400,19 +400,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "b91458ad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak\n",
+      "20\n",
+      "59\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=frase\n",
+    "print(frase)\n",
+    "print(string.index(\"ordenador\"))\n",
+    "print(string.index(\"ventana\"))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "b01ec2bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ordenador\n",
+      "ventana\n"
+     ]
+    }
+   ],
+   "source": [
+    "indice_1=string[20:29]\n",
+    "indice_2=string[59:66]\n",
+    "print(indice_1)\n",
+    "print(indice_2)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -433,19 +462,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d07c17e",
+   "execution_count": 57,
+   "id": "11053fe0-d4d4-4d96-a2bf-af04e3a8589f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak\n",
+      "30\n",
+      "58\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=frase\n",
+    "print(frase)\n",
+    "frase_2=(string.index(\"que no puedas lanzar por una\"))\n",
+    "print(frase_2)\n",
+    "print(frase_2 + len(\"que no puedas lanzar por una\"))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11053fe0-d4d4-4d96-a2bf-af04e3a8589f",
+   "execution_count": 58,
+   "id": "3d07c17e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ordenador que no puedas lanzar por una ventana\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(indice_1, frase[30:58], indice_2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -466,11 +521,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "23f39959",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.startswith(\"nunca\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -499,11 +567,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "fd459e90",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.endswith(\".\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -532,19 +613,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "d24490e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "27271dc2-0996-4729-bd23-1aa49abd1ae9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nunca confies en un ordenador ',\n",
+       " ' no puedas lanzar por una ventana -- Steve Wozniak']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.split(\"que\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -565,19 +673,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "922a9f36",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Nunca confies en un ordenador que no puedas lanzar por una ventana -- Steve Wozniak'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "c280cd39-ded7-477b-87ac-0cce0291fb29",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Nunca c',\n",
+       " 'nfies en un ',\n",
+       " 'rdenad',\n",
+       " 'r que n',\n",
+       " ' puedas lanzar p',\n",
+       " 'r una ventana -- Steve W',\n",
+       " 'zniak']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.split(\"o\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -598,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "64cd99f1",
    "metadata": {},
    "outputs": [
@@ -608,7 +748,7 @@
        "30"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "04bac0f8",
    "metadata": {},
    "outputs": [],
