--- a/MOD01/01.Notebooks Ejercicios/04.bucles_13_12_2024.ipynb
+++ b/MOD01/01.Notebooks Ejercicios/04.bucles_13_12_2024.ipynb
@@ -498,30 +498,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "7589273f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La letra 'H' aparece 1 veces\n",
-      "La letra 'o' aparece 4 veces\n",
-      "La letra 'l' aparece 3 veces\n",
-      "La letra 'a' aparece 3 veces\n",
-      "La letra ' ' aparece 2 veces\n",
-      "La letra 'm' aparece 2 veces\n",
-      "La letra 'u' aparece 1 veces\n",
-      "La letra 'n' aparece 1 veces\n",
-      "La letra 'd' aparece 1 veces\n",
-      "La letra 'r' aparece 1 veces\n",
-      "La letra 'v' aparece 1 veces\n",
-      "La letra 'i' aparece 1 veces\n",
-      "La letra 's' aparece 1 veces\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for letra, conteo in contar_letras.items():\n",
     "    print(f\"La letra '{letra}' aparece {conteo} veces\")"
@@ -533,7 +513,13 @@
    "id": "c80fb589",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frase = input(\"Escribe una frase\")\n",
+    "string = frase\n",
+    "Counter(string)\n",
+    "\n",
+    "counter_letras= Counter (string)  \n"
+   ]
   },
   {
    "cell_type": "code",
