--- a/MOD01/PROYECTO MOD01/Proyecto01 final.ipynb
+++ b/MOD01/PROYECTO MOD01/Proyecto01 final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,9 @@
     "        self.apellido = apellido\n",
     "        self.CCAA = CCAA\n",
     "        self.email = (f\"{nombre.lower()}.{apellido.lower()}@{CCAA.lower()}.com\")\n",
-    "        self.edad = (edad)\n",
-    "        self.altura = (altura)\n",
-    "        self.estudiante = (estudiante)\n",
+    "        self.edad = edad\n",
+    "        self.altura = altura\n",
+    "        self.estudiante = estudiante\n",
     "    \n",
     "    def __str__(self):\n",
     "        es_estudiante = \"Si\" if self.estudiante else \"No\"\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "menu = \"\"\"Bienvenid@, selecciona una opcion: \n",
     "1 - Ver todos los usuarios\n",
-    "2 - Ver todos los usuarios ordenados\n",
+    "2 - Ordenar los usuarios por edad\n",
     "3 - Ver un usuario por email\n",
     "4 - Crear nuevo usuario\n",
     "5 - Actualizar usuario existente\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
     "            print(usuario)       \n",
     "    print(\"\\n\")\n",
     "    \n",
-    "def ver_ordenados(): #2 Ordenar los usuarios descendiente\n",
+    "def ver_ordenados(): #2 Ordenar los usuarios edad descendiente\n",
     "    usuarios_ordenados = sorted(usuarios, key=lambda usuario: usuario.edad, reverse=True)\n",
     "    for usuario in usuarios_ordenados:\n",
     "        print(usuario) \n",
