--- a/MOD02/02. Notebooks Ejercicios/04.estadistica.ipynb
+++ b/MOD02/02. Notebooks Ejercicios/04.estadistica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7320a211",
    "metadata": {},
    "outputs": [],
@@ -27,12 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "72b73a62-1b81-4902-a8ee-c25425a2169f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numpy==2.2.0\n",
+      "matplotlib==3.10.0\n",
+      "scipy==1.14.1\n"
+     ]
+    }
+   ],
    "source": [
     "# Versiones\n",
     "\n",
@@ -43,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2dbace1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../Data/FUELCONSUMPTION_CITY.pkl\", \"br\") as f:\n",
+    "with open(\"Data/FUELCONSUMPTION_CITY.pkl\", \"br\") as f:\n",
     "    fuel_city = pkl.load(f)\n",
     "    \n",
-    "with open(\"../Data/FUELCONSUMPTION_HWY.pkl\", \"br\") as f:\n",
+    "with open(\"Data/FUELCONSUMPTION_HWY.pkl\", \"br\") as f:\n",
     "    fuel_hwy = pkl.load(f)"
    ]
   },
@@ -596,7 +606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -610,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
