--- a/MOD01_Python/PROYECTO MOD01/m1_Noelia_Madrigal.ipynb
+++ b/MOD01_Python/PROYECTO MOD01/m1_Noelia_Madrigal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,10 +69,21 @@
     "    print(\"\\n\")\n",
     "    \n",
     "def ver_ordenados(): #2 Ordenar los usuarios edad descendiente\n",
-    "    usuarios_ordenados = sorted(usuarios, key=lambda usuario: usuario.edad, reverse=True)\n",
+    "    while True: \n",
+    "        orden = int(input(\"Elige el orden: 1-ascendente o 2-descendente\"))\n",
+    "        if orden == 1:\n",
+    "            reverse = False\n",
+    "            break\n",
+    "        elif orden == 2:\n",
+    "            reverse = True\n",
+    "            break\n",
+    "        else:\n",
+    "            print (\"Opción incorrecta, selecciona 1 o 2\")\n",
+    "         \n",
+    "    usuarios_ordenados = sorted(usuarios, key=lambda usuario: usuario.edad, reverse=reverse)\n",
     "    for usuario in usuarios_ordenados:\n",
     "        print(usuario) \n",
-    "    print(\"\\n\")    \n",
+    "        \n",
     "    \n",
     "def ver_correo(): #3 Ver un usuario por email\n",
     "    email = input(\"Escribe el email del usuario\")\n",
@@ -100,13 +111,38 @@
     "\n",
     "def actualizar_usuario(): #5 Actualizar un usuario existente\n",
     "    email = input(\"Escribe el email del usuario a modificar\")\n",
-    "    estudiante_actualizado = bool(input(\"¿Es estudiante? (True/False)\"))\n",
     "    actualizado = False\n",
     "    \n",
     "    for usuario in usuarios:\n",
     "        if email.lower() == usuario.email.lower():\n",
-    "            usuario.estudiante = estudiante_actualizado\n",
-    "            actualizado = True\n",
+    "            print(\"Elige que atributo quieres actualizar: 1. Nombre 2. Apellido 3.Email 4. Edad 5. Altura 6. Estudiante\")\n",
+    "            opcion = input(\"Selecciona 1/2/3/4/5/6\")\n",
+    "            if opcion == \"1\":\n",
+    "                nuevo_nombre = input(\"Escribe el nuevo nombre\")\n",
+    "                usuario.nombre = nuevo_nombre\n",
+    "                actualizado = True\n",
+    "            elif opcion == \"2\":\n",
+    "                nuevo_apellido = input(\"Escribe el nuevo apellido\")\n",
+    "                usuario.apellido = nuevo_apellido\n",
+    "                actualizado = True\n",
+    "            elif opcion == \"3\":\n",
+    "                nuevo_email = (input(\"Escribe el nuevo email\"))\n",
+    "                usuario.email = nuevo_email\n",
+    "                actualizado = True            \n",
+    "            elif opcion == \"4\":\n",
+    "                nueva_edad = int(input(\"Escribe la nueva edad\"))\n",
+    "                usuario.edad = nueva_edad\n",
+    "                actualizado = True\n",
+    "            elif opcion == \"5\":\n",
+    "                nueva_altura = int(input(\"Escribe la nueva altura\"))\n",
+    "                usuario.edad = nueva_altura\n",
+    "                actualizado = True\n",
+    "            elif opcion == \"6\":\n",
+    "                estudiante_actualizado = bool(input(\"¿Es estudiante? (True/False): \"))\n",
+    "                usuario.estudiante = estudiante_actualizado\n",
+    "                actualizado = True   \n",
+    "            else:\n",
+    "                print(\"Opción no válida.\")    \n",
     "            break\n",
     "    \n",
     "    if actualizado:\n",
@@ -138,9 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usuario: Lola, Flores, email lola.flores@andalucia.com, edad 51 años, altura 1.55 m, estudiante No\n",
+      "Usuario: Rocio, Durcal, email rocio.durcal@madrid.com, edad 66 años, altura 1.6 m, estudiante No\n",
+      "Usuario: Manuel, Serrat, email manuel.serrat@catalunya.com, edad 80 años, altura 1.81 m, estudiante Si\n",
+      "Hasta luego\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    option = int(input(menu))\n",
