--- a/MOD02_Numpy/02. Notebooks Ejercicios/04.estadistica.ipynb
+++ b/MOD02_Numpy/02. Notebooks Ejercicios/04.estadistica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7320a211",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "72b73a62-1b81-4902-a8ee-c25425a2169f",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "2dbace1d",
    "metadata": {},
    "outputs": [],
@@ -67,20 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c01b1889",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.9, 11.2,  6. , ..., 13.4, 12.9, 14.9], shape=(1067,))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fuel_city # Gasto de combustible en la ciudad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5501bbc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.7,  7.7,  5.8, ...,  9.8,  9.3, 10.2], shape=(1067,))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fuel_hwy # Gasto de combustible en la autovía"
    ]
@@ -99,27 +121,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63287467",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c3ede09c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "array = [1, 2, 3, 4, 5]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95420d3b",
+   "execution_count": 22,
+   "id": "c1cb59be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def varianza(array):\n",
+    "    mean = np.mean(array)\n",
+    "    squared_mean = mean**2\n",
+    "    squared_elements = [element**2 for element in array]\n",
+    "    differences = [element - squared_mean for element in squared_elements]\n",
+    "    varianza = np.sum(differences)/len(array)\n",
+    "    return varianza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c41753c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "varianza(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "162f82a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.var(array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,27 +202,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1213ab63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def std(array):\n",
+    "    mean = np.mean(array)\n",
+    "    squared_mean = mean**2\n",
+    "    squared_elements = [element**2 for element in array]\n",
+    "    differences = [element - squared_mean for element in squared_elements]\n",
+    "    variance = np.sum(differences)/len(array)\n",
+    "    standard_dev = np.sqrt(variance)\n",
+    "    return standard_dev"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "586efd5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(std(array))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f6bc5089",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.4142135623730951)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "bd4982b7",
    "metadata": {},
    "outputs": [],
@@ -593,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8efa5c5d",
    "metadata": {
     "tags": []
