--- a/MOD03_Datascience/03. Notebooks Ejercicios/01.numpy_1.ipynb
+++ b/MOD03_Datascience/03. Notebooks Ejercicios/01.numpy_1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 110,
    "id": "c5e694ac",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 111,
    "id": "230265d0-4569-4582-84ca-845fcb91aed6",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "id": "12914c1b",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "id": "3216bb58",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "id": "ef81c396",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 115,
    "id": "cb679748",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "10"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 116,
    "id": "5f8738d9",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 117,
    "id": "a46adfc2",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "array([0, 2, 4, 6, 8, 1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
    "id": "52ab96be",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "       [7, 9]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 119,
    "id": "39f29d4f",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "id": "b68dd617",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "       [0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "id": "734d9f67",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "       [0, 0, 0, 5]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 122,
    "id": "84675849",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 123,
    "id": "15f8820b",
    "metadata": {},
    "outputs": [
@@ -426,12 +426,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.37663529e-312 2.16443571e-312 2.29175545e-312 2.01589600e-312\n",
-      "  2.22809558e-312 2.18565567e-312]\n",
-      " [2.33419537e-312 2.29175545e-312 2.31297541e-312 2.46151512e-312\n",
-      "  2.22809558e-312 1.01855798e-312]\n",
-      " [6.79038653e-313 8.70018275e-313 2.31297541e-312 2.46151512e-312\n",
-      "  2.22809558e-312 1.01855798e-312]]\n"
+      "[[1.43446915e-311 5.33590898e-322 1.43594782e-311 1.43594782e-311\n",
+      "  1.43596902e-311 1.43594782e-311]\n",
+      " [1.43594782e-311 1.43594782e-311 1.43596839e-311 1.43594782e-311\n",
+      "  1.43594782e-311 1.43594782e-311]\n",
+      " [1.43594782e-311 1.43596847e-311 1.43594782e-311 1.43597165e-311\n",
+      "  0.00000000e+000 0.00000000e+000]]\n"
      ]
     }
    ],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 124,
    "id": "cfb83730",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 125,
    "id": "7cc2c0bc",
    "metadata": {},
    "outputs": [],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 126,
    "id": "0b816486",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "       [107, 109, 113, 127, 131, 137]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,29 +541,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "ed329abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12],\n",
+       "       [13, 14, 15, 16]])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "slicing"
+    "matriz_azul = np.arange(1,17).reshape(4,4)\n",
+    "matriz_azul"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "c05f196c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numeros_a_reemplazar = [(0, 2), (1, 1), (1, 3), (2, 0), (3,2)]\n",
+    "nuevo_valor = 99"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "d148695c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2 99  4]\n",
+      " [ 5 99  7 99]\n",
+      " [99 10 11 12]\n",
+      " [13 14 99 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fila, col in numeros_a_reemplazar:\n",
+    "    matriz_azul[fila, col] = nuevo_valor\n",
+    "    \n",
+    "print(matriz_azul)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -576,11 +610,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "0a1496e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2, 99,  4],\n",
+       "       [99, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_azul[[0,2]]"
+   ]
   },
   {
    "cell_type": "code",
@@ -609,11 +657,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "047311f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99,  7, 11, 99])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_azul[:, 2]"
+   ]
   },
   {
    "cell_type": "code",
@@ -642,19 +703,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "f9f72826",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72247f04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, 99],\n",
+       "       [99,  7],\n",
+       "       [10, 11],\n",
+       "       [14, 99]])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_azul[:, 1:3]"
+   ]
   },
   {
    "cell_type": "code",
@@ -675,19 +744,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6efd36bc",
+   "execution_count": 133,
+   "id": "15b53998",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2, 99,  4],\n",
+       "       [ 5, 99,  7, 99],\n",
+       "       [99, 10, 11, 12],\n",
+       "       [13, 14, 99, 16]])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_azul"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15b53998",
+   "execution_count": 134,
+   "id": "6efd36bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[99,  7],\n",
+       "       [10, 11]])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_azul[1:3, 1:3]"
+   ]
   },
   {
    "cell_type": "code",
@@ -708,11 +807,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "f9d01c3b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2, 99,  4,  5, 99,  7, 99, 99, 10, 11, 12, 13, 14, 99, 16])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_azul= matriz_azul.flatten()\n",
+    "vector_azul"
+   ]
   },
   {
    "cell_type": "code",
@@ -741,11 +854,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "8e045ee7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Como no coinciden los elementos, solo será de los primeros 4 elementos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "00df10e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2, 99,  4]])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz4 = vector_azul[:4].reshape(1,4)\n",
+    "matriz4"
+   ]
   },
   {
    "cell_type": "code",
@@ -774,31 +911,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "1dd66c12",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "matriz_a= (np.random.randint(1,20, size = (4,4)))\n",
+    "matriz_b= (np.random.randint(1,20, size = (4,4)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "4ca5da60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4 11 17  3]\n",
+      " [ 8  5  8  1]\n",
+      " [ 7 16 11  6]\n",
+      " [14  8 11  8]]\n",
+      "[[ 5 16 16  1]\n",
+      " [ 6  5 12  9]\n",
+      " [ 2 17 17 16]\n",
+      " [ 7  6 14 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matriz_a)\n",
+    "print(matriz_b)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "id": "6d5150b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4, 11, 17,  3],\n",
+       "       [ 8,  5,  8,  1],\n",
+       "       [ 7, 16, 11,  6],\n",
+       "       [14,  8, 11,  8],\n",
+       "       [ 5, 16, 16,  1],\n",
+       "       [ 6,  5, 12,  9],\n",
+       "       [ 2, 17, 17, 16],\n",
+       "       [ 7,  6, 14, 19]], dtype=int32)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((matriz_a, matriz_b))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 154,
+   "id": "a20a996d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4, 11, 17,  3],\n",
+       "       [ 8,  5,  8,  1],\n",
+       "       [ 7, 16, 11,  6],\n",
+       "       [14,  8, 11,  8],\n",
+       "       [ 5, 16, 16,  1],\n",
+       "       [ 6,  5, 12,  9],\n",
+       "       [ 2, 17, 17, 16],\n",
+       "       [ 7,  6, 14, 19]], dtype=int32)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((matriz_a, matriz_b), axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "id": "46d3968e-3ca3-4976-a7dd-14bc3279a9cc",
    "metadata": {},
    "outputs": [],
