--- a/MOD03_Datascience/03. Notebooks Ejercicios/05.pandas_3.ipynb
+++ b/MOD03_Datascience/03. Notebooks Ejercicios/05.pandas_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "id": "a48526c3",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "id": "578d7108-4d27-4f25-bd41-46a1faf8bb64",
    "metadata": {
     "tags": []
@@ -56,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "id": "3395863d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(\"../Data/titanic_1.csv\")\n",
-    "df2 = pd.read_csv(\"../Data/titanic_2.csv\")"
+    "df1 = pd.read_csv(\"./Data/titanic_1.csv\")\n",
+    "df2 = pd.read_csv(\"./Data/titanic_2.csv\")"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "id": "700ec390",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "max     891.000000    1.000000    3.000000  512.329200"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "id": "41f6d33f",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "0            1  Braund, Mr. Owen Harris  male  22.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "id": "ac4e3205",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "0            1         0       3  A/5 21171  7.25"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "id": "f94c3547",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 97,
    "id": "5dbe3ccb",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "890                       Dooley, Mr. Patrick  32.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "id": "6558bf13",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
        "18  31.0         0       3            345763  18.0000  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 99,
    "id": "0db7aad9",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 100,
    "id": "b2790ab9",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
        "[163 rows x 8 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 101,
    "id": "f854c556",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "id": "3db5791f",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "[314 rows x 8 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,10 +1162,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "75940d39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Moran, Mr. James</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>330877</td>\n",
+       "      <td>8.4583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>McCarthy, Mr. Timothy J</td>\n",
+       "      <td>male</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17463</td>\n",
+       "      <td>51.8625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Palsson, Master. Gosta Leonard</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>349909</td>\n",
+       "      <td>21.0750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>883</th>\n",
+       "      <td>884</td>\n",
+       "      <td>Banfield, Mr. Frederick James</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>C.A./SOTON 34068</td>\n",
+       "      <td>10.5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>884</th>\n",
+       "      <td>885</td>\n",
+       "      <td>Sutehall, Mr. Henry Jr</td>\n",
+       "      <td>male</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>SOTON/OQ 392076</td>\n",
+       "      <td>7.0500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>887</td>\n",
+       "      <td>Montvila, Rev. Juozas</td>\n",
+       "      <td>male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>211536</td>\n",
+       "      <td>13.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>890</td>\n",
+       "      <td>Behr, Mr. Karl Howell</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>111369</td>\n",
+       "      <td>30.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>891</td>\n",
+       "      <td>Dooley, Mr. Patrick</td>\n",
+       "      <td>male</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>370376</td>\n",
+       "      <td>7.7500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>577 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId                            Name   Sex   Age  Survived  \\\n",
+       "0              1         Braund, Mr. Owen Harris  male  22.0         0   \n",
+       "4              5        Allen, Mr. William Henry  male  35.0         0   \n",
+       "5              6                Moran, Mr. James  male   NaN         0   \n",
+       "6              7         McCarthy, Mr. Timothy J  male  54.0         0   \n",
+       "7              8  Palsson, Master. Gosta Leonard  male   2.0         0   \n",
+       "..           ...                             ...   ...   ...       ...   \n",
+       "883          884   Banfield, Mr. Frederick James  male  28.0         0   \n",
+       "884          885          Sutehall, Mr. Henry Jr  male  25.0         0   \n",
+       "886          887           Montvila, Rev. Juozas  male  27.0         0   \n",
+       "889          890           Behr, Mr. Karl Howell  male  26.0         1   \n",
+       "890          891             Dooley, Mr. Patrick  male  32.0         0   \n",
+       "\n",
+       "     Pclass            Ticket     Fare  \n",
+       "0         3         A/5 21171   7.2500  \n",
+       "4         3            373450   8.0500  \n",
+       "5         3            330877   8.4583  \n",
+       "6         1             17463  51.8625  \n",
+       "7         3            349909  21.0750  \n",
+       "..      ...               ...      ...  \n",
+       "883       2  C.A./SOTON 34068  10.5000  \n",
+       "884       3   SOTON/OQ 392076   7.0500  \n",
+       "886       2            211536  13.0000  \n",
+       "889       1            111369  30.0000  \n",
+       "890       3            370376   7.7500  \n",
+       "\n",
+       "[577 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[df[\"Sex\"] == \"male\"]"
    ]
@@ -1189,35 +1382,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "47c5519f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(18177.4125)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_class_1 = df[(df[\"Pclass\"] == 1)]\n",
+    "df_class_1[\"Fare\"].sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "9fc59434",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3801.8417)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_class_2 = df[(df[\"Pclass\"] == 2)]\n",
+    "df_class_2[\"Fare\"].sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "c062574a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(6714.6951)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_class_3 = df[(df[\"Pclass\"] == 3)]\n",
+    "df_class_3[\"Fare\"].sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "ce87b8cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216 pasajeros de 1ª clase\n",
+      "184 pasajeros de 2ª clase\n",
+      "491 pasajeros de 3ª clase\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{df_class_1.shape[0]} pasajeros de 1ª clase\")\n",
+    "print(f\"{df_class_2.shape[0]} pasajeros de 2ª clase\")\n",
+    "print(f\"{df_class_3.shape[0]} pasajeros de 3ª clase\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1601,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "id": "34ba18c7",
    "metadata": {},
    "outputs": [
@@ -1788,7 +2037,7 @@
        "9  14.0         1       2            237736  30.0708      joven  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "id": "128e274f",
    "metadata": {},
    "outputs": [
@@ -1944,7 +2193,7 @@
        "dict_items([('PassengerId', dtype('int64')), ('Name', dtype('O')), ('Sex', dtype('O')), ('Age', dtype('float64')), ('Survived', dtype('int64')), ('Pclass', dtype('int64')), ('Ticket', dtype('O')), ('Fare', dtype('float64')), ('Rango_edad', dtype('O'))])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 110,
    "id": "da755f85",
    "metadata": {},
    "outputs": [],
@@ -1967,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 111,
    "id": "23d4dda3",
    "metadata": {},
    "outputs": [
@@ -2084,7 +2333,7 @@
        "4  35.0         0       3            373450   8.0500     ADULTO  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 112,
    "id": "86bffd4b",
    "metadata": {
     "tags": []
